--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ or Windows</li>
     <div class="features_box">
       <h3>Welcome to GB Network Solutions </h3>
       <span class="style1">We offer cost-effective managed web hosting in the industry. </span>
-      <p>GB Network Solutions has been setting the standard for reliability and performance in the industry since 2007 and will be around for years to come. GB Network Solutions specialize in providing support Dedicated Server, Colocation, Virtual Private Server, Web Hosting, Domain Names and SSL.</p>
+      <p>GB Network Solutions is the largest company supplying services on the internet such as Web Hosting, Linux VPS, Windows VPS, Dedicated Server, Domain Registration, SSL Cert etc. We also cover the latest news about technologies.</p>
       <ul>
         <li class="feature_icon1"><span class="style2">99.9% Uptime Guarantee</span> GB Network Solutions runs multiple network backbone thus making us optimistic ... <a href="#">Learn More</a></li>
         <li class="feature_icon2"><span class="style2">24/7 DEDICATED SUPPORT</span> We offer 24/7 Dedicated technical support at our ticketing desk by our highly qualified technicians ... <a href="#">Learn More</a></li>
