latest add and fixed

--- a/shared_hosting.html
+++ b/shared_hosting.html
@@ -117,7 +117,7 @@ $(document).ready(function () {
             </ul>
             <div class="clear"></div>
             <div class="btnbox">
-              <div class="btn1 redbtn"><a href="https://secure.gempakbox.net/cart.php?a=add&pid=1">ORDER NOW!</a></div>
+              <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
               <div class="btn1 greybtn"><a onclick="displayHideBox('No'); return false;" href="#">Feature</a></div>
               <!--btnbox--> 
             </div>
@@ -142,7 +142,7 @@ $(document).ready(function () {
             </ul>
             <div class="clear"></div>
             <div class="btnbox">
-              <div class="btn1 redbtn"><a href="https://secure.gempakbox.net/cart.php?a=add&pid=2">ORDER NOW!</a></div>
+              <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
               <div class="btn1 greybtn"><a onclick="displayHideBox('No1'); return false;" href="#">Feature</a></div>
             </div>
             <!--subplan_inner--> 
@@ -165,7 +165,7 @@ $(document).ready(function () {
             </ul>
             <div class="clear"></div>
             <div class="btnbox">
-              <div class="btn1 redbtn"><a href="https://secure.gempakbox.net/cart.php?a=add&pid=3">ORDER NOW!</a></div>
+              <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
               <div class="btn1 greybtn"><a onclick="displayHideBox('No2'); return false;" href="#">Feature</a></div>
             </div>
             <!--subplan_inner--> 
@@ -188,7 +188,7 @@ $(document).ready(function () {
             </ul>
             <div class="clear"></div>
             <div class="btnbox">
-              <div class="btn1 redbtn"><a href="https://secure.gempakbox.net/cart.php?a=add&pid=4">ORDER NOW!</a></div>
+              <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
               <div class="btn1 greybtn"><a onclick="displayHideBox('No3'); return false;" href="#">Feature</a></div>
             </div>
             <!--subplan_inner--> 
@@ -267,7 +267,7 @@ $(document).ready(function () {
             </ul>
             <div class="clear"></div>
             <div class="btnbox">
-              <div class="btn1 redbtn"><a href="https://secure.gempakbox.net/cart.php?a=add&pid=73">ORDER NOW!</a></div>
+              <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
               <div class="btn1 greybtn"><a onclick="displayHideBox('No4'); return false;" href="#">Feature</a></div>
             </div>
             <!--subplan_inner--> 
@@ -291,7 +291,7 @@ $(document).ready(function () {
             </ul>
             <div class="clear"></div>
             <div class="btnbox">
-              <div class="btn1 redbtn"><a href="https://secure.gempakbox.net/cart.php?a=add&pid=74">ORDER NOW!</a></div>
+              <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
               <div class="btn1 greybtn"><a onclick="displayHideBox('No5'); return false;" href="#">Feature</a></div>
             </div>
             <!--subplan_inner--> 
@@ -314,7 +314,7 @@ $(document).ready(function () {
             </ul>
             <div class="clear"></div>
             <div class="btnbox">
-              <div class="btn1 redbtn"><a href="https://secure.gempakbox.net/cart.php?a=add&pid=76">ORDER NOW!</a></div>
+              <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
               <div class="btn1 greybtn"><a onclick="displayHideBox('No6'); return false;" href="#">Feature</a></div>
             </div>
             <!--subplan_inner--> 
@@ -337,7 +337,7 @@ $(document).ready(function () {
             </ul>
             <div class="clear"></div>
             <div class="btnbox">
-              <div class="btn1 redbtn"><a href="https://secure.gempakbox.net/cart.php?a=add&pid=78">ORDER NOW!</a></div>
+              <div class="btn1 redbtn"><a href="#">ORDER NOW!</a></div>
               <div class="btn1 greybtn"><a onclick="displayHideBox('No7'); return false;" href="#">Feature</a></div>
             </div>
             <!--subplan_inner--> 
@@ -413,8 +413,8 @@ $(document).ready(function () {
         <h4>Should I choose Linux or Windows Hosting platform?</h4>
         <div class="txtinner">
           <p>Linux is a very reliable operating system that supports a wide range of applications and programming languages such as PHP, MySQL, Ruby on Rails, and SSH.<br />
-However, Windows is an excellent hosting platform option for websites built using Microsoft technologies such as MS Access, ASP, ASP.NET, MS SQL 2005/2008 and many more.<br />
-If you are new to web hosting and would just like to host your web site and emails, we recommend Linux hosting platform.</p>
+            However, Windows is an excellent hosting platform option for websites built using Microsoft technologies such as MS Access, ASP, ASP.NET, MS SQL 2005/2008 and many more.<br />
+            If you are new to web hosting and would just like to host your web site and emails, we recommend Linux hosting platform.</p>
           <!--txtinner--> 
         </div>
         <h4>Is Shopping Cart compatible on Shared Hosting Plans?</h4>
@@ -435,12 +435,12 @@ If you are new to web hosting and would just like to host your web site and emai
         <h4>Can I point multiple domains to the same website?</h4>
         <div class="txtinner">
           <p>Yes, you can point multiple domains to the same website on all our hosting plans.</p>
-          <!--txtinner-->
+          <!--txtinner--> 
         </div>
         <h4>Can I upgrade/downgrade my web hosting plan in future?</h4>
         <div class="txtinner">
           <p>Yes, you can upgrade/downgrade your web hosting plan at any point of time.</p>
-          <!--txtinner-->
+          <!--txtinner--> 
         </div>
         <h4>Will I notice any downtime during upgrade or downgrade procedure?</h4>
         <div class="txtinner">
@@ -450,28 +450,28 @@ If you are new to web hosting and would just like to host your web site and emai
         <h4>Do you support IMAP?</h4>
         <div class="txtinner">
           <p>Yes, IMAP is supported on all our hosting plans.</p>
-          <!--txtinner-->                                     
+          <!--txtinner--> 
         </div>
         <h4>Do you take daily backups of my website?</h4>
         <div class="txtinner">
           <p>Yes, we do take daily off-line backups of complete server. However, GB Network strongly advises the client to regularly perform a backup of their web content.</p>
-          <!--txtinner-->                                     
+          <!--txtinner--> 
         </div>
         <h4>What are the restrictions on Shared Hosting?</h4>
         <div class="txtinner">
           <p>GB Network does not allow child pornography, unsolicited e-mail, bulk emailing, spam, Torrents, IRC Bots, Proxy Scripts / Anonymizers, Pirated Software.etc. Any account found violating these restrictions is subject to termination or suspension, depending on the account with no money back refund.</p>
-          <!--txtinner-->                                     
+          <!--txtinner--> 
         </div>
         <h4>What is the benefit of Dedicated IP?</h4>
         <div class="txtinner">
           <p>Dedicated IP is very good for you if you want the visitors of your site to download many FTP files from
-your website and also if you want to have some financial transactions on your web site like accepting credit cards. Also, if you are hosting multiple websites on the same IP then you should have a Dedicated IP.</p>
-          <!--txtinner-->                                     
+            your website and also if you want to have some financial transactions on your web site like accepting credit cards. Also, if you are hosting multiple websites on the same IP then you should have a Dedicated IP.</p>
+          <!--txtinner--> 
         </div>
         <h4>What methods of payment do you accept?</h4>
         <div class="txtinner">
           <p>We accept all major credit cards which can be paid via Paypal option while trying to signup and Bank transfers.</p>
-          <!--txtinner-->                                     
+          <!--txtinner--> 
         </div>
         <!--accordianbox--> 
       </div>
@@ -524,7 +524,7 @@ your website and also if you want to have some financial transactions on your we
           <li><a href="https://secure.gempakbox.net/clientarea.php?action=invoices">Invoice History</a></li>
           <li><a href="https://secure.gempakbox.net/domainchecker.php">Whois Search</a></li>
           <li><a href="https://secure.gempakbox.net/knowledgebase.php">Knowledgebase</a></li>
-          <li><a href="https://secure.gempakbox.net/affiliates.php">Affiliate Program</a></li>       
+          <li><a href="https://secure.gempakbox.net/affiliates.php">Affiliate Program</a></li>
         </ul>
         <h5>Legals</h5>
         <ul>
@@ -536,7 +536,6 @@ your website and also if you want to have some financial transactions on your we
         </ul>
         <!--sitemap--> 
       </div>
-     
       <div class="sitemap">
         <h5>We Accept</h5>
         <div class="image1"><img src="images/credit_icon.jpg" alt="" /></div>
@@ -1069,8 +1068,8 @@ your website and also if you want to have some financial transactions on your we
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>>
-          </tr>
+            <td><img alt="YES" src="images/tickmarkbig.png"></td>
+            > </tr>
           <tr>
             <td>Instant Account Activation</td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
@@ -2929,7 +2928,7 @@ your website and also if you want to have some financial transactions on your we
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          </tr>          
+          </tr>
           <tr>
             <td>phpMyAdmin</td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
@@ -3384,7 +3383,7 @@ your website and also if you want to have some financial transactions on your we
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          </tr>          
+          </tr>
           <tr>
             <td>phpMyAdmin</td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
@@ -3839,7 +3838,7 @@ your website and also if you want to have some financial transactions on your we
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          </tr>          
+          </tr>
           <tr>
             <td>phpMyAdmin</td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
@@ -4294,7 +4293,7 @@ your website and also if you want to have some financial transactions on your we
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          </tr>          
+          </tr>
           <tr>
             <td>phpMyAdmin</td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
