--- a/specials.html
+++ b/specials.html
@@ -5,8 +5,40 @@
 <title>GB Network</title>
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 <link href="css/menu.css" rel="stylesheet" type="text/css" />
+<link href="css/slider.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/dropdown.js"></script>
+<script type="text/javascript" src="js/jquery.cycle.all.js"></script>
+<script type="text/javascript" language="javascript">
+$(document).ready(function(){
+	$('#domainSlides').cycle({ 
+		fx: 'scrollHorz',// name of transition effect (or comma separated names, ex: 'fade,scrollUp,shuffle')
+		sync: 1,
+		startingSlide:0,
+		width:		'100%',
+		height:		0,
+		pager:      '#slider-nav',
+		speed:         1000,  // speed of the transition (any valid fx speed value) 
+		timeout:       3000,  // milliseconds between slide transitions (0 to disable auto advance)
+		pauseOnPagerHover: 0, // true to pause when hovering over pager link 
+		next:       '#next',  // element, jQuery object, or jQuery selector string for the element to use as event trigger for next slide 
+		prev:       '#prev'  // element, jQuery object, or jQuery selector string for the element to use as event trigger for previous slide
+		});
+$(document).ready(function () {
+		$('#hide').click(
+    	function () {
+        //show its submenu
+        $(".dropdown_link").stop().slideToggle(100);    
+    	});
+		$('#hide2').click(
+    	function () {
+        //show its submenu
+        $(".dropdown_link2").stop().slideToggle(100);    
+    	});
+
+	});
+});	
+</script>
 </head>
 <body>
 <div class="wrapper">
@@ -71,39 +103,79 @@
   <!--subanner--> 
 </div>
 <div class="wrapper">
-<div class="special_offerbox">
-  <h3>domain Offers</h3>
-  <div class="domain_offer">
-    <h4>.IN</h4>
-    <div class="old_rate">$9.09</div>
-    <div class="new_rate">$2.99</div>
-    <span class="style1">ends jan 31st</span>
-    <div class="slide_btn redbtn"><a href="https://secure.gempakbox.net/cart.php?a=confproduct&amp;i=2" class="buynow-button">Order Now</a></div>
-    <!--domain_offer--> 
+  <div class="special_offerbox">
+    <h3>domain Offers</h3>
+    <div class="domain-slides-con">
+      <div id="domainSlides" class="domain-slides">
+        <div class="slide slide1">
+          <div class="domain_offer">
+            <h4>.IN</h4>
+            <div class="old_rate">$9.09</div>
+            <div class="new_rate">$2.99</div>
+            <span class="style1">ends jan 31st</span>
+            <div class="slide_btn redbtn"><a href="https://secure.gempakbox.net/cart.php?a=confproduct&amp;i=2" class="buynow-button">Order Now</a></div>
+            <!--domain_offer--> 
+          </div>
+          <div class="domain_offer">
+            <h4>.WS</h4>
+            <div class="old_rate">$16.49</div>
+            <div class="new_rate">$6.99</div>
+            <span class="style1">ends jan 31st</span>
+            <div class="slide_btn redbtn"><a href="https://secure.gempakbox.net/cart.php?a=confproduct&amp;i=2" class="buynow-button">Order Now</a></div>
+            <!--domain_offer--> 
+          </div>
+          <div class="domain_offer noborder">
+            <h4>.SX</h4>
+            <div class="old_rate">$29.99</div>
+            <div class="new_rate">$14.99</div>
+            <span class="style1">ends jan 31st</span>
+            <div class="slide_btn redbtn"><a href="https://secure.gempakbox.net/cart.php?a=confproduct&amp;i=2" class="buynow-button">Order Now</a></div>
+            <!--domain_offer--> 
+          </div>
+          <!--slide--> 
+        </div>
+        <div class="slide slide2">
+          <div class="domain_offer">
+            <h4>.IN</h4>
+            <div class="old_rate">$9.09</div>
+            <div class="new_rate">$2.99</div>
+            <span class="style1">ends jan 31st</span>
+            <div class="slide_btn redbtn"><a href="https://secure.gempakbox.net/cart.php?a=confproduct&amp;i=2" class="buynow-button">Order Now</a></div>
+            <!--domain_offer--> 
+          </div>
+          <div class="domain_offer">
+            <h4>.WS</h4>
+            <div class="old_rate">$16.49</div>
+            <div class="new_rate">$6.99</div>
+            <span class="style1">ends jan 31st</span>
+            <div class="slide_btn redbtn"><a href="https://secure.gempakbox.net/cart.php?a=confproduct&amp;i=2" class="buynow-button">Order Now</a></div>
+            <!--domain_offer--> 
+          </div>
+          <div class="domain_offer noborder">
+            <h4>.SX</h4>
+            <div class="old_rate">$29.99</div>
+            <div class="new_rate">$14.99</div>
+            <span class="style1">ends jan 31st</span>
+            <div class="slide_btn redbtn"><a href="https://secure.gempakbox.net/cart.php?a=confproduct&amp;i=2" class="buynow-button">Order Now</a></div>
+            <!--domain_offer--> 
+          </div>
+          <!--slide--> 
+        </div>
+        <!--domain-slides--> 
+      </div>
+      <div class="clear"></div>
+      <div id="prev"><a href="#"></a></div>
+      <div id="next"><a href="#"></a></div>
+      <!-- slider-nav-Con--> 
+    </div>
+    <!--domain-slides-con--> 
   </div>
-  <div class="domain_offer">
-    <h4>.WS</h4>
-    <div class="old_rate">$16.49</div>
-    <div class="new_rate">$6.99</div>
-    <span class="style1">ends jan 31st</span>
-    <div class="slide_btn redbtn"><a href="https://secure.gempakbox.net/cart.php?a=confproduct&amp;i=2" class="buynow-button">Order Now</a></div>
-    <!--domain_offer--> 
-  </div>
-  <div class="domain_offer noborder">
-    <h4>.SX</h4>
-    <div class="old_rate">$29.99</div>
-    <div class="new_rate">$14.99</div>
-    <span class="style1">ends jan 31st</span>
-    <div class="slide_btn redbtn"><a href="https://secure.gempakbox.net/cart.php?a=confproduct&amp;i=2" class="buynow-button">Order Now</a></div>
-    <!--domain_offer--> 
-  </div>
-  <div class="clear"></div>
-  <div class="spacer2"></div>
-  <h3>Shared Hosting Offer</h3>
-  <div class="shared_offer">Start from $ <span class="numeric1"><span class="numeric2">2</span>.00</span> on 1<sup>st</sup> months<br />
+  <div class="shared_offer">
+    <h3>Shared Hosting Offer</h3>
+    Start from $ <span class="numeric1"><span class="numeric2">2</span>.00</span> on 1<sup>st</sup> months<br />
     and <span class="numeric3">10% OFF</span> on annual purchase
     <div class="clear"></div>
-  <div class="spacer2"></div>
+    <div class="spacer2"></div>
     <h3>dedicated Hosting Offer</h3>
     <div class="shared_offer">Start from $ <span class="numeric1"><span class="numeric2">5</span>.00</span> on 1<sup>st</sup> months<br />
       and <span class="numeric3">13% OFF</span> on annual purchase 
@@ -111,15 +183,15 @@
     </div>
     <!--special_offerbox--> 
   </div>
-   <div class="countdown_box">
-        <ul class="offer">
-        </ul>
-        <!--countdown_box--> 
-      </div>
-      <!--special_offerbox-->
-      </div>
-      <!--wrapper-->
-      </div>
+  <div class="countdown_box">
+    <ul class="offer">
+    </ul>
+    <!--countdown_box--> 
+  </div>
+  <!--special_offerbox--> 
+</div>
+<!--wrapper-->
+</div>
 <div class="partners"></div>
 <div class="footer_con">
   <div class="wrapper">
@@ -197,6 +269,6 @@
   <!--footer_con--> 
 </div>
 <script src="js/jquery.countdown.js"></script> 
-<script src="js/script.js"></script> 
+<script src="js/script.js"></script>
 </body>
 </html>
