dedicated,index,special fixed

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ $(document).ready(function () {
         <li><a href="colocation.html">Colocation</a></li>
         <li><a href="domain_ssl.html">Domain & SSL</a></li>
         <li><a href="products.html">Products</a></li>
-        <li><a class="offerbtn" href="#">Special Offers</a></li>
+        <li><a class="offerbtn" href="specials.html">Special Offers</a></li>
       </ul>
       <!--nav--> 
     </div>
