--- a/specials.html
+++ b/specials.html
@@ -99,7 +99,7 @@ $(document).ready(function () {
 </div>
 <div class="subanner vps_banner">
   <h1>Special Offers</h1>
-  <h2>GB Network Has been Setting the Standard for Reliability and Performance</h2>
+  <h2>Our range of attractive promotions help you get ahead of the competition</h2>
   <!--subanner--> 
 </div>
 <div class="wrapper">
@@ -109,26 +109,26 @@ $(document).ready(function () {
       <div id="domainSlides" class="domain-slides">
         <div class="slide slide1">
           <div class="domain_offer">
-            <h4>.IN</h4>
-            <div class="old_rate">$9.09</div>
-            <div class="new_rate">$2.99</div>
-            <span class="style1">ends jan 31st</span>
+            <h4>.BIZ</h4>
+            <div class="old_rate">RM35.00</div>
+            <div class="new_rate">RM20.00</div>
+            <span class="style1">ends feb 28th</span>
             <div class="slide_btn redbtn"><a href="https://secure.gempakbox.net/cart.php?a=confproduct&amp;i=2" class="buynow-button">Order Now</a></div>
             <!--domain_offer--> 
           </div>
           <div class="domain_offer">
-            <h4>.WS</h4>
-            <div class="old_rate">$16.49</div>
-            <div class="new_rate">$6.99</div>
-            <span class="style1">ends jan 31st</span>
+            <h4>.ORG</h4>
+            <div class="old_rate">RM35.00</div>
+            <div class="new_rate">RM24.00</div>
+            <span class="style1">ends feb 28th</span>
             <div class="slide_btn redbtn"><a href="https://secure.gempakbox.net/cart.php?a=confproduct&amp;i=2" class="buynow-button">Order Now</a></div>
             <!--domain_offer--> 
           </div>
           <div class="domain_offer noborder">
-            <h4>.SX</h4>
-            <div class="old_rate">$29.99</div>
-            <div class="new_rate">$14.99</div>
-            <span class="style1">ends jan 31st</span>
+            <h4>.ME</h4>
+            <div class="old_rate">RM90.00</div>
+            <div class="new_rate">RM35.00</div>
+            <span class="style1">ends feb 28th</span>
             <div class="slide_btn redbtn"><a href="https://secure.gempakbox.net/cart.php?a=confproduct&amp;i=2" class="buynow-button">Order Now</a></div>
             <!--domain_offer--> 
           </div>
@@ -136,26 +136,26 @@ $(document).ready(function () {
         </div>
         <div class="slide slide2">
           <div class="domain_offer">
-            <h4>.IN</h4>
-            <div class="old_rate">$9.09</div>
-            <div class="new_rate">$2.99</div>
-            <span class="style1">ends jan 31st</span>
+            <h4>.CO</h4>
+            <div class="old_rate">RM90.00</div>
+            <div class="new_rate">RM40.00</div>
+            <span class="style1">ends feb 28th</span>
             <div class="slide_btn redbtn"><a href="https://secure.gempakbox.net/cart.php?a=confproduct&amp;i=2" class="buynow-button">Order Now</a></div>
             <!--domain_offer--> 
           </div>
           <div class="domain_offer">
-            <h4>.WS</h4>
-            <div class="old_rate">$16.49</div>
-            <div class="new_rate">$6.99</div>
-            <span class="style1">ends jan 31st</span>
+            <h4>.IN</h4>
+            <div class="old_rate">RM35.00</div>
+            <div class="new_rate">RM20.00</div>
+            <span class="style1">ends feb 28th</span>
             <div class="slide_btn redbtn"><a href="https://secure.gempakbox.net/cart.php?a=confproduct&amp;i=2" class="buynow-button">Order Now</a></div>
             <!--domain_offer--> 
           </div>
           <div class="domain_offer noborder">
-            <h4>.SX</h4>
-            <div class="old_rate">$29.99</div>
-            <div class="new_rate">$14.99</div>
-            <span class="style1">ends jan 31st</span>
+            <h4>.WS</h4>
+            <div class="old_rate">RM60.00</div>
+            <div class="new_rate">RM25.00</div>
+            <span class="style1">ends feb 28th</span>
             <div class="slide_btn redbtn"><a href="https://secure.gempakbox.net/cart.php?a=confproduct&amp;i=2" class="buynow-button">Order Now</a></div>
             <!--domain_offer--> 
           </div>
@@ -172,13 +172,13 @@ $(document).ready(function () {
   </div>
   <div class="shared_offer">
     <h3>Shared Hosting Offer</h3>
-    Start from $ <span class="numeric1"><span class="numeric2">2</span>.00</span> on 1<sup>st</sup> months<br />
-    and <span class="numeric3">10% OFF</span> on annual purchase
+    Start from RM <span class="numeric1"><span class="numeric2">50</span>.00</span> on 1<sup>st</sup> year<br />
+    and <span class="numeric3">10% OFF</span> on biennially purchase
     <div class="clear"></div>
     <div class="spacer2"></div>
-    <h3>dedicated Hosting Offer</h3>
-    <div class="shared_offer">Start from $ <span class="numeric1"><span class="numeric2">5</span>.00</span> on 1<sup>st</sup> months<br />
-      and <span class="numeric3">13% OFF</span> on annual purchase 
+    <h3>Dedicated Hosting Offer</h3>
+    <div class="shared_offer">Start from RM <span class="numeric1"><span class="numeric2">249</span>.00</span> on 1<sup>st</sup> months<br />
+      and <span class="numeric3">15% OFF</span> on annual purchase 
       <!--shared_offer--> 
     </div>
     <!--special_offerbox--> 
