--- a/dedicated.html
+++ b/dedicated.html
@@ -125,7 +125,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -157,7 +157,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -189,7 +189,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -221,7 +221,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -253,7 +253,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -285,7 +285,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -317,7 +317,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -349,7 +349,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -384,7 +384,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -416,7 +416,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -448,7 +448,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -480,7 +480,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -512,7 +512,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -544,7 +544,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -576,7 +576,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -608,7 +608,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -651,7 +651,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -683,7 +683,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -715,7 +715,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -747,7 +747,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -779,7 +779,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -814,7 +814,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -846,7 +846,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -878,7 +878,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -910,7 +910,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -942,7 +942,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -983,7 +983,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -1015,7 +1015,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -1047,7 +1047,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -1079,7 +1079,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -1111,7 +1111,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -1143,7 +1143,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -1178,7 +1178,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -1210,7 +1210,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -1242,7 +1242,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -1274,7 +1274,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
@@ -1306,7 +1306,7 @@ $(document).ready(function () {
                   <th>&nbsp;</th>
                 </tr>
                 <tr>
-                  <td>WebhostingUK.com</td>
+                  <td>GBNETSRV</td>
                   <td><span class="green">Dual-Core Intel<br />
                     Atom D525 1.8GHz</span></td>
                   <td>2GB DDR3</td>
